--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rm -rf dist && tsc --project tsconfig.build.json",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src",
     "generate-peggy": "./scripts/generate-peggy.sh",
     "prepare": "npm run generate-peggy && npm run build",
     "prepublishOnly": "npm run test && npm run lint",
@@ -35,21 +35,21 @@
     "catch-unknown": "^2.0.0",
     "error-cause": "^1.0.8",
     "no-case": "^3.0.4",
-    "type-fest": "^2.19.0"
+    "type-fest": "^4.30.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/error-cause": "^1.0.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.57.1",
-    "husky": "^8.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
+    "eslint": "^9.17.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.11",
-    "peggy": "^2.0.1",
-    "prettier": "^2.8.8",
+    "peggy": "^4.2.0",
+    "prettier": "^3.4.2",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
   },
